<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">阅享</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="txt_register">新用户注册</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="reinput_password">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="rb_bbs">文章</string>
    <string name="rb_find">推荐</string>
    <string name="rb_my">我的</string>
</resources>
