<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img_login_light"
    android:orientation="vertical" >
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/White"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/bar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bar_back_green" />

            <TextView
                android:id="@+id/bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_register" />
            
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.0" >

        <ImageView
            android:id="@+id/school_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/school_img" />
    </RelativeLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.0"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/input_username"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_username"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <requestFocus />
        </EditText>

         <EditText
            android:id="@+id/input_password"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_password"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" 
            android:inputType="textPassword">

            <requestFocus />
        </EditText>
        
                  <EditText
            android:id="@+id/reinput_password"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/reinput_password"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" 
            android:inputType="textPassword">

            <requestFocus />
        </EditText>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="250dip"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/btn_login"
                 android:paddingBottom="8dp"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
                 android:paddingTop="8dp"
                 android:text="@string/register"
                 android:textColor="@color/White"
                 android:textSize="18sp" />

         </RelativeLayout>

    </LinearLayout>
</LinearLayout>
